[gd_scene load_steps=36 format=2]

[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/app.gd" type="Script" id=2]
[ext_resource path="res://mat/MesaCMaterial.tres" type="Material" id=3]
[ext_resource path="res://mat/MistyHillsWMaterial.tres" type="Material" id=4]
[ext_resource path="res://mat/MistyHillsCMaterial.tres" type="Material" id=5]
[ext_resource path="res://mat/sky_environment2.tres" type="Environment" id=6]
[ext_resource path="res://addons/godot-xr-tools/assets/PlayerBody.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/godot-xr-tools/misc/VR_Common_Shader_Cache.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/OverlayHelper.gd" type="Script" id=9]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Flight_movement.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Glide_movement.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/godot-xr-tools/assets/LeftHand.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/godot-xr-tools/assets/RightHand.tscn" type="PackedScene" id=13]
[ext_resource path="res://music/Victory.mp3" type="AudioStream" id=14]
[ext_resource path="res://src/OverlayLabel3D.gd" type="Script" id=15]
[ext_resource path="res://fonts/AmaticSC-Bold.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Direct_movement.tscn" type="PackedScene" id=17]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Grapple_movement.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/OQ_SplashScreen.tscn" type="PackedScene" id=19]
[ext_resource path="res://tex/Ground049A_2K-JPG/Ground049A_2K_Color.jpg" type="Texture" id=20]
[ext_resource path="res://src/StarterVoiceOvers.gd" type="Script" id=21]
[ext_resource path="res://sounds/readloud.net/Go_Dough_Game_Engine_912.mp3" type="AudioStream" id=22]
[ext_resource path="res://src/StarterArea.gd" type="Script" id=23]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Pickup.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/PickableWord1.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/PickableWord2.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/PickableWord3.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/PickableWord4.tscn" type="PackedScene" id=28]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 16 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 20, 0.54, 20 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_texture = ExtResource( 20 )
uv1_scale = Vector3( 10, 10, 10 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 10, 0.25, 10 )

[sub_resource type="SphereMesh" id=5]
flip_faces = true
radius = 6.0
height = 5.0
is_hemisphere = true

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
albedo_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 4, 3, 0.1 )

[node name="App" type="Spatial"]
script = ExtResource( 2 )
render_distance = 32
chunk_size = 128
chunk_density = 16
misty_hills_cmat = ExtResource( 5 )
misty_hills_wmat = ExtResource( 4 )
mesa_cmat = ExtResource( 3 )
mesa_wmat = ExtResource( 4 )

[node name="Light" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0 )

[node name="FPController" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 125, 0 )
far_z = 10000.0

[node name="ARVRCamera" parent="FPController" index="1"]
far = 10000.0

[node name="vr_common_shader_cache" parent="FPController/ARVRCamera" index="0" instance=ExtResource( 8 )]

[node name="LeftHand" parent="FPController/LeftHandController" index="0" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, -0.05, 0.15 )

[node name="Function_Direct_movement" parent="FPController/LeftHandController" index="1" instance=ExtResource( 17 )]
max_speed = 5.0
strafe = true

[node name="Function_Grapple_movement" parent="FPController/LeftHandController" index="2" instance=ExtResource( 18 )]
grapple_length = 20.0
grapple_button_id = 1

[node name="Function_Pickup" parent="FPController/LeftHandController" index="3" instance=ExtResource( 24 )]

[node name="RightHand" parent="FPController/RightHandController" index="0" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, -0.05, 0.15 )

[node name="Function_Grapple_movement" parent="FPController/RightHandController" index="1" instance=ExtResource( 18 )]
grapple_length = 20.0
grapple_button_id = 1

[node name="Function_Pickup" parent="FPController/RightHandController" index="2" instance=ExtResource( 24 )]

[node name="PlayerBody" parent="FPController" instance=ExtResource( 7 )]

[node name="Function_Flight_movement" parent="FPController" instance=ExtResource( 10 )]
controller = 1
flight_button = 14
speed_scale = 35.0
acceleration_scale = 10.0
exclusive = false

[node name="Function_Glide_movement" parent="FPController" instance=ExtResource( 11 )]
glide_forward_speed = 30.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 6 )

[node name="OverlayHelper" type="Spatial" parent="."]
script = ExtResource( 9 )
arvrcamera_path = NodePath("../FPController/ARVRCamera")

[node name="Label3D" type="Label3D" parent="OverlayHelper"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
cast_shadow = 0
pixel_size = 0.001
modulate = Color( 0.945098, 0.878431, 0.156863, 1 )
font = SubResource( 1 )
autowrap = true
width = 600.0
script = ExtResource( 15 )

[node name="StarterArea" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 124, 0 )
script = ExtResource( 23 )

[node name="FloorMeshInstance" type="MeshInstance" parent="StarterArea"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="FloorCollisionShape" type="CollisionShape" parent="StarterArea"]
shape = SubResource( 4 )

[node name="SphereInstance" type="MeshInstance" parent="StarterArea"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="InvisibleWall" type="CollisionShape" parent="StarterArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15639, 4.05585 )
shape = SubResource( 7 )

[node name="InvisibleWall4" type="CollisionShape" parent="StarterArea"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.09129, 1.15639, -0.235828 )
shape = SubResource( 7 )

[node name="InvisibleWall3" type="CollisionShape" parent="StarterArea"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.25675, 1.15639, -0.126576 )
shape = SubResource( 7 )

[node name="InvisibleWall2" type="CollisionShape" parent="StarterArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15639, -3.89498 )
shape = SubResource( 7 )

[node name="OQ_SplashScreen" parent="StarterArea" instance=ExtResource( 19 )]

[node name="StarterVoiceOvers" type="AudioStreamPlayer" parent="StarterArea"]
stream = ExtResource( 22 )
script = ExtResource( 21 )

[node name="PickableWord1" parent="StarterArea" instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.94847, 1.82722, -1.342 )
gravity_scale = 0.0

[node name="PickableWord2" parent="StarterArea" instance=ExtResource( 26 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.255912, 1.45814, -1.37825 )
gravity_scale = 0.0

[node name="PickableWord3" parent="StarterArea" instance=ExtResource( 27 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.104395, 1.76287, -1.3976 )
gravity_scale = 0.0

[node name="PickableWord4" parent="StarterArea" instance=ExtResource( 28 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.505579, 1.91204, -1.27525 )
gravity_scale = 0.0

[editable path="FPController"]
